Fix breakpoints not getting hit for .mjs files

Fixes: QTCREATORBUG-25328
Change-Id: I7e859fec62c7d0c3a34bd6a88e2c8a77c32fb932
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@qt.io>